# Humanise

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  render.yaml
humanise/: __init__.py  api_keys.py  cli.py  pipeline.py  web.py
humanise-frontend/: astro.config.mjs  package-lock.json  package.json
humanise-frontend/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
humanise-frontend/.wrangler/state/v3/images/miniflare-images-KVNamespaceObject/: metadata.sqlite-shm  metadata.sqlite-wal
humanise-frontend/.wrangler/state/v3/kv/miniflare-KVNamespaceObject/: metadata.sqlite-shm  metadata.sqlite-wal
humanise-frontend/scripts/: patch-env.mjs
humanise-frontend/src/layouts/: Layout.astro
humanise-frontend/src/lib/: ai.ts  detection.ts  prompts.ts  rules.ts
humanise-frontend/src/pages/: index.astro  keys.astro
humanise-frontend/src/pages/api/: detect.ts  health.ts  humanize.ts  rules.ts
humanise/detection/: __init__.py  feedback.py
humanise/engines/: __init__.py  base.py  gemini.py  groq.py  ollama.py
humanise/prompts/: __init__.py  templates.py
humanise/rules/: __init__.py  elegant.py  humanize_rules.py  polish.py  scramble.py
